Changed button names, added an activity for each button to begin making submenus for each button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <!-- ***ADDED BY ME*** -->
+        <activity android:name=".CActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".AActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".DActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".PActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".RBActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".CPActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".SCActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".VFActivity"
+            android:parentActivityName=".MainActivity" />
+        <!-- ***************** -->
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
