--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".SplashScreenActivity">
+        <activity android:name=".SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,34 +18,44 @@
         </activity>
         <activity
             android:name=".CActivity"
+            android:label="@string/button8"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".AActivity"
-            android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".DActivity"
+            android:label="@string/button7"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".PActivity"
+            android:label="@string/button6"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".DActivity"
+            android:label="@string/button5"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".RBActivity"
+            android:label="@string/button4"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".CPActivity"
+            android:label="@string/button3"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SCActivity"
+            android:label="@string/button2"
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".VFActivity"
+            android:label="@string/button1"
             android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".VF0Activity"
+            android:label="@string/VPMenu0"
+            android:parentActivityName=".VFActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:windowAnimationStyle ="@null"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
