--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,9 +53,13 @@
             android:label="@string/VFMenu0"
             android:parentActivityName=".VFActivity" />
         <activity
+            android:name=".VF1Activity"
+            android:label="@string/VFMenu1"
+            android:parentActivityName=".VFActivity" />
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
