--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,45 +17,45 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CActivity"
+            android:name=".B8Activity"
             android:label="@string/button8"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".AActivity"
+            android:name=".B7Activity"
             android:label="@string/button7"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".PActivity"
+            android:name=".B6Activity"
             android:label="@string/button6"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".DActivity"
+            android:name=".B5Activity"
             android:label="@string/button5"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".RBActivity"
+            android:name=".B4Activity"
             android:label="@string/button4"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".CPActivity"
+            android:name=".B3Activity"
             android:label="@string/button3"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".SCActivity"
+            android:name=".B2Activity"
             android:label="@string/button2"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".VFActivity"
+            android:name=".B1Activity"
             android:label="@string/button1"
             android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".VF0Activity"
-            android:label="@string/VFMenu0"
-            android:parentActivityName=".VFActivity" />
+            android:name=".B1_0Activity"
+            android:label="@string/b1_Menu1"
+            android:parentActivityName=".MainActivity" />
         <activity
-            android:name=".VF1Activity"
-            android:label="@string/VFMenu1"
-            android:parentActivityName=".VFActivity" />
+            android:name=".B1_1Activity"
+            android:label="@string/b1_Menu2"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
