--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.lima">
+    package="org.pazyesperanza.paztoral">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
 
     <application
         android:icon="@mipmap/ic_launcher"
@@ -8,7 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashScreenActivity">
+        <activity
+            android:name="org.pazyesperanza.paztoral.SigninActivity"
+            android:label="@string/signin"
+            android:parentActivityName="org.pazyesperanza.paztoral.MainActivity" />
+        <activity android:name="org.pazyesperanza.paztoral.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,47 +24,47 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".B8Activity"
+            android:name="org.pazyesperanza.paztoral.B8Activity"
             android:label="@string/button8"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="org.pazyesperanza.paztoral.MainActivity" />
         <activity
-            android:name=".B7Activity"
+            android:name="org.pazyesperanza.paztoral.B7Activity"
             android:label="@string/button7"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="org.pazyesperanza.paztoral.MainActivity" />
         <activity
-            android:name=".B6Activity"
+            android:name="org.pazyesperanza.paztoral.B6Activity"
             android:label="@string/button6"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="org.pazyesperanza.paztoral.MainActivity" />
         <activity
-            android:name=".B5Activity"
+            android:name="org.pazyesperanza.paztoral.B5Activity"
             android:label="@string/button5"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="org.pazyesperanza.paztoral.MainActivity" />
         <activity
-            android:name=".B4Activity"
+            android:name="org.pazyesperanza.paztoral.B4Activity"
             android:label="@string/button4"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="org.pazyesperanza.paztoral.MainActivity" />
         <activity
-            android:name=".B3Activity"
+            android:name="org.pazyesperanza.paztoral.B3Activity"
             android:label="@string/button3"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="org.pazyesperanza.paztoral.MainActivity" />
         <activity
-            android:name=".B2Activity"
+            android:name="org.pazyesperanza.paztoral.B2Activity"
             android:label="@string/button2"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="org.pazyesperanza.paztoral.MainActivity" />
         <activity
-            android:name=".B1Activity"
+            android:name="org.pazyesperanza.paztoral.B1Activity"
             android:label="@string/button1"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="org.pazyesperanza.paztoral.MainActivity" />
         <activity
-            android:name=".B1EvalActivityStart"
+            android:name="org.pazyesperanza.paztoral.B1EvalActivityStart"
             android:label="@string/button1"
-            android:parentActivityName=".B1Activity" />
+            android:parentActivityName="org.pazyesperanza.paztoral.B1Activity" />
         <activity
-            android:name=".B1EvalActivity"
+            android:name="org.pazyesperanza.paztoral.B1EvalActivity"
             android:label="@string/button1"
-            android:parentActivityName=".B1EvalActivityStart" />
+            android:parentActivityName="org.pazyesperanza.paztoral.B1EvalActivityStart" />
         <activity
-            android:name=".MainActivity"
+            android:name="org.pazyesperanza.paztoral.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
